--- a/files/index.html
+++ b/files/index.html
@@ -1,21 +1,23 @@
 <!DOCTYPE HTML>
 <html manifest="manifest.appcache">
-  <head>
-    <title>ArduPilot</title>
-    <meta charset="UTF-8">
-    <link rel="stylesheet" href="css/styles.css">
-    <script type="text/javascript" src="js/config.js"></script>
-    <script type="text/javascript" src="js/cors.js"></script>
-    <script type="text/javascript" src="js/mavlink.js"></script>
-  </head>
+
+<head>
+  <title>MiSmart</title>
+  <meta charset="UTF-8">
+  <link rel="stylesheet" href="css/styles.css">
+  <script type="text/javascript" src="js/config.js"></script>
+  <script type="text/javascript" src="js/cors.js"></script>
+  <script type="text/javascript" src="js/mavlink.js"></script>
+</head>
+
 <body>
 
-<p><a href="index.html"><img src="images/main_logo.png" alt="ArduPilot"></a></p>
+  <p><a href="index.html"><img src="images/main_logo.png" alt="ArduPilot" width="500"></a></p>
 
 
-<h2>ArduPilot Web Server</h2>
+  <h2>ArduPilot Web Server</h2>
 
-Welcome to the ArduPilot Web Interface!<p>
+  Welcome to the ArduPilot Web Interface!<p>
 
   <ul>
     <li><a href="filesystem.html">Filesystem access</a></li>
@@ -26,8 +28,11 @@ Welcome to the ArduPilot Web Interface!<p>
     <li><a href="calibration.html">Calibration</a></li>
     <li><a href="parameters.html">Flight Parameters</a></li>
     <li><a href="nvram.html">Video Parameters</a></li>
+    <li><a href="nvram.html">Video Parameters</a></li>
+    <li><a href="flighthub.html">Configure Flight Hub</a></li>
   </ul>
 
 
 </body>
+
 </html>
