--- a/files/flighthub.html
+++ b/files/flighthub.html
@@ -3,6 +3,7 @@
 
 <head>
     <title>MiSmart</title>
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
     <meta charset="UTF-8">
     <link rel="stylesheet" href="css/styles.css">
     <script type="text/javascript" src="js/config.js"></script>
@@ -37,7 +38,7 @@
                 method: 'post',
                 body: formData,
             }).then((resp) => {
-                console.log('updated');
+                alert('Token updated');
             })
         }
     </script>
