--- a/files/index.html
+++ b/files/index.html
@@ -3,6 +3,7 @@
 
 <head>
   <title>MiSmart</title>
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
   <meta charset="UTF-8">
   <link rel="stylesheet" href="css/styles.css">
   <script type="text/javascript" src="js/config.js"></script>
