--- a/files/parameters.html
+++ b/files/parameters.html
@@ -1,32 +1,42 @@
 <!DOCTYPE HTML>
 <html manifest="manifest.appcache">
-  <head>
+
+<head>
     <title>MiSmart</title>
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
     <meta charset="UTF-8">
     <link rel="stylesheet" href="css/styles.css">
     <script type="text/javascript" src="js/config.js"></script>
     <script type="text/javascript" src="js/cors.js"></script>
     <script type="text/javascript" src="js/mavlink.js"></script>
-  </head>
+</head>
+
 <body>
 
-<p><a href="index.html"><img src="images/main_logo.png" alt="ArduPilot" width="500"></a></p>
+    <p><a href="index.html"><img src="images/main_logo.png" alt="ArduPilot" width="500"></a></p>
 
-Parameter Category:&nbsp
-<select name="param_category" id="param_category" onchange="refresh();">
-</select>
+    Parameter Category:&nbsp
+    <select name="param_category" id="param_category" onchange="refresh();">
+    </select>
 
-<p><input type="submit" name="action" value="Refresh" onclick="refresh();">&nbsp;
-<input type="text" id="search", onkeyup="search_change()" placeholder="Search parameters ...">
+    <p><input type="submit" name="action" value="Refresh" onclick="refresh();">&nbsp;
+        <input type="text" id="search" , onkeyup="search_change()" placeholder="Search parameters ...">
 
-<p><div id="message"></div>
+    <p>
+    <div id="message"></div>
 
-<table id="param_table" class="parameters">
-  <tr><th>Name</th><th class="alnright">Value</th><th>Options</th><th>Full Name</th><th>Description</th></tr>
-</table>
+    <table id="param_table" class="parameters">
+        <tr>
+            <th>Name</th>
+            <th class="alnright">Value</th>
+            <th>Options</th>
+            <th>Full Name</th>
+            <th>Description</th>
+        </tr>
+    </table>
 
-<hr>
-<p><a href="index.html">home</a>
+    <hr>
+    <p><a href="index.html">home</a>
 
 </body>
 <script>
@@ -50,7 +60,7 @@ Parameter Category:&nbsp
 
     var category_select = document.getElementById("param_category");
     var ncategories = categories.length;
-    for (var i=0; i<ncategories; i++) {
+    for (var i = 0; i < ncategories; i++) {
         var c = categories[i].split(":");
         var category = c[0];
         var prefixes = c[1];
@@ -71,13 +81,13 @@ Parameter Category:&nbsp
 
         // delete any existing rows
         var nrows = table.rows.length;
-        for (var i=nrows-1; i>0; i--) {
+        for (var i = nrows - 1; i > 0; i--) {
             table.deleteRow(i);
         }
-        
+
         try {
             plist = JSON.parse(json);
-            plist.sort(function(a,b) {
+            plist.sort(function (a, b) {
                 if (a.name < b.name) {
                     return -1;
                 }
@@ -86,14 +96,14 @@ Parameter Category:&nbsp
                 }
                 return 0;
             });
-        } catch(e) {
+        } catch (e) {
             console.log(e);
             return;
         }
 
         var n = plist.length;
 
-        for (var i=0; i<n; i++) {
+        for (var i = 0; i < n; i++) {
             var rownum = table.rows.length;
             var row = table.insertRow(table.rows.length);
             var rowdata = plist[i];
@@ -112,12 +122,12 @@ Parameter Category:&nbsp
 
     function refresh() {
         var category = document.getElementById("param_category").value;
-        command_send("get_param_list(" + prefix_hash[category] + ")", { "onload" : fill_parameters });
+        command_send("get_param_list(" + prefix_hash[category] + ")", { "onload": fill_parameters });
     }
 
     function change_param(name, value) {
         document.getElementById("message").innerHTML = '<b style="color:blue">Changing ' + name + " to " + value + '</b>';
-    
+
         console.log("Set name: " + name + " value: " + value);
         command_send("mavlink_message_send(PARAM_SET,0,0," + name + "," + value + ")");
         var select = document.getElementById("select:" + name);
@@ -133,12 +143,12 @@ Parameter Category:&nbsp
         }
         var bitoptions = param_docs[name].bitoptions;
         var nbits = bitoptions.length;
-        for (var i=0; i<nbits; i++) {
+        for (var i = 0; i < nbits; i++) {
             var opt = bitoptions[i];
             var d = document.getElementById(name + ":BIT:" + opt.bit);
             if (d != null) {
                 var checked = false;
-                if (value & (1<<opt.bit)) {
+                if (value & (1 << opt.bit)) {
                     checked = true;
                 }
                 d.checked = checked;
@@ -158,9 +168,9 @@ Parameter Category:&nbsp
         var oldvalue = document.getElementById("input:" + name).value;
         var value = oldvalue;
         if (checked) {
-            value |= 1<<bit;
+            value |= 1 << bit;
         } else {
-            value &= ~(1<<bit);
+            value &= ~(1 << bit);
         }
         if (value != oldvalue) {
             document.getElementById("input:" + name).value = value;
@@ -185,7 +195,7 @@ Parameter Category:&nbsp
         var search = document.getElementById("search").value.toUpperCase();
         var table = document.getElementById("param_table");
         var nrows = table.rows.length;
-        for (var i=1; i<nrows; i++) {
+        for (var i = 1; i < nrows; i++) {
             var tr = table.rows[i];
             show_hide(tr, search);
         }
@@ -198,7 +208,7 @@ Parameter Category:&nbsp
         var sel = '<select id="select:' + name + '" onchange="change_selection(\'' + name + '\',this.value);">\r\n';
         var nvalues = values.length;
         var found_selection = false;
-        for (var i=0; i<nvalues; i++) {
+        for (var i = 0; i < nvalues; i++) {
             var selected = "";
             if (value == values[i].code) {
                 selected = " selected";
@@ -216,7 +226,7 @@ Parameter Category:&nbsp
         var sel = cell.innerHTML;
         var nbits = bitoptions.length;
         var value = byname[name];
-        for (var i=0; i<nbits; i++) {
+        for (var i = 0; i < nbits; i++) {
             var opt = bitoptions[i];
             if (sel != '') {
                 sel += '<br>\n';
@@ -231,8 +241,8 @@ Parameter Category:&nbsp
     function fill_param_docs() {
         var table = document.getElementById("param_table");
         var nrows = table.rows.length;
-        for (var i=1; i<nrows; i++) {
-            var tr = table.rows[i];            
+        for (var i = 1; i < nrows; i++) {
+            var tr = table.rows[i];
             var name = tr.cells[0].innerHTML;
             var pdoc = param_docs[name];
             if (pdoc) {
@@ -253,7 +263,7 @@ Parameter Category:&nbsp
         var xmldoc = new DOMParser().parseFromString(xml, 'text/xml');
         var params = xmldoc.getElementsByTagName("param");
         var nparam = params.length;
-        for (var i=0; i<nparam; i++) {
+        for (var i = 0; i < nparam; i++) {
             var p = params[i];
             var name = p.attributes.name.nodeValue;
             if (name.indexOf(":") > -1) {
@@ -268,21 +278,23 @@ Parameter Category:&nbsp
             if ('user' in p.attributes) {
                 user = p.attributes.user.nodeValue;
             }
-            param_docs[name] = { humanName : humanName, documentation : documentation,
-                                 user : user, values : null };
+            param_docs[name] = {
+                humanName: humanName, documentation: documentation,
+                user: user, values: null
+            };
             var nchildren = 0;
             if (p.children) {
                 nchildren = p.children.length;
             }
-            for (var j=0; j<nchildren; j++) {
+            for (var j = 0; j < nchildren; j++) {
                 var c = p.children[j];
                 if (c.nodeName == "values") {
                     param_docs[name].values = []
                     var nvalues = c.children.length;
-                    for (var k=0; k<nvalues; k++) {
+                    for (var k = 0; k < nvalues; k++) {
                         var code = c.children[k].attributes.code.value;
                         var text = c.children[k].innerHTML;
-                        param_docs[name].values.push({'code' : code, 'value' : text});
+                        param_docs[name].values.push({ 'code': code, 'value': text });
                     }
                 }
                 if (c.nodeName == "field" && c.attributes[0].value == "Bitmask") {
@@ -290,13 +302,13 @@ Parameter Category:&nbsp
                     var barray = bmask.split(',');
                     var nbits = barray.length;
                     var bitoptions = []
-                    for (var k=0; k<nbits; k++) {
+                    for (var k = 0; k < nbits; k++) {
                         var bopt = barray[k];
                         var opt = bopt.split(':')
                         if (opt.length != 2) {
                             continue;
                         }
-                        bitoptions.push({"bit" : opt[0], "label" : opt[1]});
+                        bitoptions.push({ "bit": opt[0], "label": opt[1] });
                     }
                     param_docs[name].bitoptions = bitoptions;
                 }
